cluster/manifests/hello-world1/green/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world1
spec:
  template:
    spec:
      containers:
        - name: hello-world1
          resources:
            limits:
              cpu: 300m
              memory: 700Mi
            requests:
              cpu: 300m
              memory: 700Mi
