cluster/manifests/hello-world1/green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world1
spec:
  rules:
    - http:
        paths:
          - path: /green
